1.6.18.0/_sources/Reference/NodeReference/GafferArnold/ArnoldAttributes.md.txt
ArnoldAttributes
================

Applies Arnold attributes to objects in the scene.

user
----

Container for user-defined plugs. Nodes
should never make their own plugs here,
so users are free to do as they wish.

out
---

The processed output scene.

enabled
-------

The on/off state of the node. When it is off, the node outputs the input scene unchanged.

in
--

The input scene

filter
------

The filter used to control which parts of the scene are
processed. A Filter node should be connected here.

attributes
----------

The attributes to be applied - arbitrary numbers of user defined
attributes may be added as children of this plug via the user
interface, or using the CompoundDataPlug API via python.

attributes.ai:visibility:camera
-------------------------------

Whether or not the object is visible to camera
rays. To hide an object completely, use the
`scene:visible` attribute instead.

attributes.ai:visibility:shadow
-------------------------------

Whether or not the object is visible to shadow
rays (whether or not it casts shadows).

attributes.ai:visibility:shadow_group
-------------------------------------

The lights that cause this object to cast shadows.

> Caution : This attribute has been superceded and will be removed. Use
> the standard `shadowedLights` attribute instead.

attributes.ai:visibility:diffuse_reflect
----------------------------------------

Whether or not the object is visible in
reflected diffuse (ie. if it casts bounce light).

attributes.ai:visibility:specular_reflect
-----------------------------------------

Whether or not the object is visible in
reflected specular (ie. if it is visible in mirrors).

attributes.ai:visibility:diffuse_transmit
-----------------------------------------

Whether or not the object is visible in
transmitted diffuse (ie. if it casts light through leaves).

attributes.ai:visibility:specular_transmit
------------------------------------------

Whether or not the object is visible in
refracted specular (ie. if it can be seen through glass).

attributes.ai:visibility:volume
-------------------------------

Whether or not the object is visible in
volume scattering.

attributes.ai:visibility:subsurface
-----------------------------------

Whether or not the object is visible to subsurface
rays.

attributes.ai:disp_autobump
---------------------------

Automatically turns the details of the displacement map
into bump, wherever the mesh is not subdivided enough
to properly capture them.

attributes.ai:autobump_visibility:camera
----------------------------------------

Whether or not the autobump is visible to camera
rays.

attributes.ai:autobump_visibility:shadow
----------------------------------------

Whether or not the autobump is visible to shadow
rays.

attributes.ai:autobump_visibility:diffuse_reflect
-------------------------------------------------

Whether or not the autobump is visible in
reflected diffuse (ie. if it casts bounce light).

attributes.ai:autobump_visibility:specular_reflect
--------------------------------------------------

Whether or not the autobump is visible in
reflected specular (ie. if it is visible in mirrors).

attributes.ai:autobump_visibility:diffuse_transmit
--------------------------------------------------

Whether or not the autobump is visible in
transmitted diffuse (ie. if it casts light through leaves).

attributes.ai:autobump_visibility:specular_transmit
---------------------------------------------------

Whether or not the autobump is visible in
refracted specular (ie. if it can be seen through glass).

attributes.ai:autobump_visibility:volume
----------------------------------------

Whether or not the autobump is visible in
volume scattering.

attributes.ai:autobump_visibility:subsurface
--------------------------------------------

Whether or not the autobump is visible to subsurface
rays.

attributes.ai:transform_type
----------------------------

Choose how transform motion is interpolated. "Linear"
produces classic linear vertex motion, "RotateAboutOrigin"
produces curved arcs centred on the object's origin, and
"RotateAboutCenter", the default, produces curved arcs
centred on the object's bounding box middle.

attributes.ai:matte
-------------------

Turns the object into a holdout matte.
This only affects primary (camera) rays.

attributes.ai:opaque
--------------------

Flags the object as being opaque.

attributes.ai:receive_shadows
-----------------------------

Whether or not the object receives shadows.

attributes.ai:self_shadows
--------------------------

Whether or not the object casts shadows onto itself.

attributes.ai:sss_setname
-------------------------

If given, subsurface will be blended across any other objects which share the same sss set name.

attributes.ai:polymesh:subdiv_iterations
----------------------------------------

The maximum number of subdivision
steps to apply when rendering subdivision
surface. To set an exact number of
subdivisions, set the adaptive error to
0 so that the maximum becomes the
controlling factor.

Use the MeshType node to ensure that a
mesh is treated as a subdivision surface
in the first place.

attributes.ai:polymesh:subdiv_adaptive_error
--------------------------------------------

The maximum allowable deviation from the true
surface and the subdivided approximation. How
the error is measured is determined by the
metric below. Note also that the iterations
value above provides a hard limit on the maximum
number of subdivision steps, so if changing the
error setting appears to have no effect,
you may need to raise the maximum.

> Note : Objects with a non-zero value will not take part in
> Gaffer's automatic instancing unless `ai:polymesh:subdiv_adaptive_space`
> is set to "object".

attributes.ai:polymesh:subdiv_adaptive_metric
---------------------------------------------

The metric used when performing adaptive
subdivision as specified by the adaptive error.
The flatness metric ensures that the subdivided
surface doesn't deviate from the true surface
by more than the error, and will tend to
increase detail in areas of high curvature. The
edge length metric ensures that the edge length
of a polygon is never longer than the error,
so will tend to subdivide evenly regardless of
curvature - this can be useful when applying a
displacement shader. The auto metric automatically
uses the flatness metric when no displacement
shader is applied, and the edge length metric when
a displacement shader is applied.

attributes.ai:polymesh:subdiv_adaptive_space
--------------------------------------------

The space in which the error is measured when
performing adaptive subdivision. Raster space means
that the subdivision adapts to size on screen,
with `ai:polymesh:subdiv_adaptive_error` being
specified in pixels.
Object space means that the error is measured in
object space units and will not be sensitive to
size on screen.

attributes.ai:polymesh:subdiv_uv_smoothing
------------------------------------------

Determines how UVs are subdivided.

attributes.ai:polymesh:subdiv_smooth_derivs
-------------------------------------------

Computes smooth UV derivatives (dPdu and dPdv) per
vertex. This can be needed to remove faceting
from anisotropic specular and other shading effects
that use the derivatives.

attributes.ai:polymesh:subdiv_frustum_ignore
--------------------------------------------

Turns off subdivision culling on a per-object basis. This provides
finer control on top of the global `ai:subdiv_frustum_culling` option
provided by the ArnoldOptions node.

attributes.ai:polymesh:subdivide_polygons
-----------------------------------------

Causes polygon meshes to be rendered with Arnold's
subdiv_type parameter set to "linear" rather than
"none". This can be used to increase detail when
using polygons with displacement shaders and/or mesh
lights.

> Caution : This is not equivalent to converting a polygon
> mesh into a subdivision surface. To render with Arnold's
> subdiv_type set to "catclark", you must use the MeshType
> node to convert polygon meshes into subdivision surfaces.

attributes.ai:curves:mode
-------------------------

How the curves are rendered. Ribbon mode treats
the curves as flat ribbons facing the camera, and is
most suited for rendering of thin curves with a
dedicated hair shader. Thick mode treats the curves
as tubes, and is suited for use with a regular
surface shader.

> Note : To render using Arnold's "oriented" mode, set
> mode to "ribbon" and add per-vertex normals to the
> curves as a primitive variable named "N".

attributes.ai:curves:min_pixel_width
------------------------------------

The minimum thickness of the curves, measured
in pixels on the screen. When rendering very thin curves, a
large number of AA samples are required
to avoid aliasing. In these cases a minimum pixel
width may be specified to artificially thicken the curves,
meaning that fewer AA samples may be used. The additional width is
compensated for automatically by lowering the opacity
of the curves.

attributes.ai:points:min_pixel_width
------------------------------------

The minimum width of rendered points primitives, measured in pixels on the screen.
When rendering very small points, a large number of AA samples are required to avoid
aliasing. In these cases a minimum pixel width may be specified to artificially enlarge
the points, meaning that fewer AA samples may be used. The additional size is
compensated for automatically by lowering the opacity of the points.

attributes.ai:volume:step_size
------------------------------

Override the step size taken when raymarching volumes.
If this value is disabled or zero then value is calculated from the voxel size.

attributes.ai:volume:step_scale
-------------------------------

Raymarching step size is calculated using this value
multiplied by the volume voxel size or `ai:volume:step_size` if set.

attributes.ai:shape:step_size
-----------------------------

A non-zero value causes an object to be treated
as a volume container, and a value of 0 causes
an object to be treated as regular geometry.

attributes.ai:shape:step_scale
------------------------------

Raymarching step size is calculated using this value
multiplied by `ai:shape:step_size`.

attributes.ai:shape:volume_padding
----------------------------------

Allows a volume to be displaced outside its bounds. When
rendering a mesh as a volume, this enables displacement.

attributes.ai:volume:velocity_scale
-----------------------------------

Scales the vector used in VDB motion blur computation.

attributes.ai:volume:velocity_fps
---------------------------------

Sets the frame rate used in VDB motion blur computation.

attributes.ai:volume:velocity_outlier_threshold
-----------------------------------------------

Sets the outlier threshold used in VDB motion blur computation.

When rendering physics simulations resulting velocities are
potentially noisy and require some filtering for faster rendering.

attributes.ai:toon_id
---------------------

You can select in the toon shader to skip outlines between objects with the same toon id set.

global
------

Causes the attributes to be applied to the scene globals
instead of the individual locations defined by the filter.

extraAttributes
---------------

An additional set of attributes to be added. Arbitrary numbers
of attributes may be specified within a single `IECore.CompoundObject`,
where each key/value pair in the object defines an attribute.
This is convenient when using an expression to define the attributes
and the attribute count might be dynamic. It can also be used to
create attributes whose type cannot be handled by the `attributes`
CompoundDataPlug, with `IECoreScene.ShaderNetwork` being one example.

If the same attribute is defined by both the attributes and the
extraAttributes plugs, then the value from the extraAttributes
is taken.